YNU-650: implement v1 getters (#495)
